--- a/MvcCalcEx/MvcCalcEx/Views/Calc/Index.cshtml
+++ b/MvcCalcEx/MvcCalcEx/Views/Calc/Index.cshtml
@@ -8,12 +8,17 @@
 {
     @Html.Label("input 1")
     //løs binding på variablen Num1 der indeholder Num1's værdi
-    @Html.TextBox("Num1", Model.Num1);
-    @Html.Label("input 2")
+    //@Html.TextBox("Num1", Model.Num1);
+
     //stærk binding på variablen Num2 der indeholder Num2's værdi
+    @Html.TextBoxFor(Model => Model.Num1, Model.Num1);
+    @Html.Label("input 2")
+    
     @Html.TextBoxFor(Model => Model.Num2, Model.Num2);
     <br />
-    @Html.Label("Result", Model.Result);
+    //løs bundet label der bindes til result og viser dens indhold
+    //@Html.Label("Result", Model.Result);
+    @Html.DisplayFor(Model => Model.Result, Model.Result)
     <br />
     <input type="submit" name="submit" id="submitAdd" value="add" />
     <input type="submit" name="submit" id="submitSubtract" value="subtract" />
